get the config file working

--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,23 @@
-1.) Get config file working:
-    *Group patches together that need to be patched in a particular order.
+V 1.) Get config file working:
+    *Group patches together that need 
+    to be patched in a particular order.
 
 2.) Get patches into program:
     *Parse config file.
-    *Load patch identifiers into memory in the right order as specified in the config file.
+
+    *Load patch identifiers into memory 
+    in the right order as specified in 
+    the config file.
 
 3.) Find optimal patch configuration:
     *Disect every patch into its components.
-    *Create library for files. Key=filename, value=array of patch components.
-    *Make sure the arrays are sorted from farthest to closest from the beginning of the file.
+
+    *Create library for files. Key=filename,
+    value=array of patch components.
+
+    *Make sure the arrays are sorted from
+    farthest to closest from the beginning of the file.
 
 4.) Apply patches:
-    *Try to apply patches with python script, not "git apply"
+    *Try to apply patches with python script,
+    not "git apply"
